--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -60,8 +60,8 @@ jobs:
   package-and-release:
     name: Package for macos_${{ matrix.arch }}
     needs: build-cli
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     runs-on: ${{ matrix.runner }}
+    if: github.ref_type == 'tag'
     strategy:
       fail-fast: false
       matrix:
@@ -143,8 +143,11 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           repository: NexaAI/nexa-sdk
-          files: "artifacts/nexa-cli_macos_${{ matrix.arch }}.pkg"
           tag_name: ${{ env.VERSION }}
-          make_latest: true
+          files: |
+            "artifacts/nexa-cli_macos_${{ matrix.arch }}.pkg"
+          draft: ${{ contains(github.ref, '-rc') }}
+          generate_release_notes: true
+          make_latest: ${{ !contains(github.ref, '-rc') }}
         env:
           GITHUB_TOKEN: ${{ secrets.ZACK_ACCESS_TOKEN }}
