--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -102,3 +102,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ZACK_ACCESS_TOKEN }}
 
+      - name: Configure AWS credentials
+        if: ${{ !contains(github.ref, '-rc') }}
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-west-1
+
+      - name: Sync to S3
+        if: ${{ !contains(github.ref, '-rc') }}
+        shell: bash
+        run: |
+          aws s3 cp "nexa-cli_linux_${{ matrix.arch }}.sh" "s3://nexa-model-hub-bucket/public/nexa_sdk/downloads/nexa-cli_linux_${{ matrix.arch }}.sh"
