feat: swift-binding-release (#545)
* add nexaskd swift binding

* add readme

* add generationStream

* Update README.md

* add Example

* Add embedding by input IDs to Embedder

* Make `generationStream` public in LLMLlama and VLMLlama

* Refactor test

* Refactor DeviceList to Device

Replaces the DeviceList struct with a Device struct containing id and name. Updates getLlamaDeviceList to return an array of Device instead of DeviceList, and adjusts logic to build the array accordingly. This simplifies the API and improves clarity.

* Refactor embedding and generation APIs, and add embedding search

- Refactored embedding output to return 2D arrays and updated related logic. - Unified and renamed LLM and VLM generation methods to 'generate' and 'generateAsyncStream' for consistency
- Updated Model protocol and extensions accordingly
- Added an EmbeddingSearch utility and test for embedding-based document search
- Updated tests to use new APIs and improved test coverage.

* update： `ml.h` align

* Update framework revision

* Update README.md

* Fix typo: templeteOptions to templateOptions

- Renamed all instances of 'templeteOptions' to 'templateOptions' in GenerationOptions
- Updated test and usage in README for clarity.

* remove example

* update package revision

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ __debug_bin
 
 # TLS certificates
 *.pem
+/.swiftpm
+/bindings/ios/Example/Example.xcodeproj/project.xcworkspace/xcuserdata
+/bindings/ios/NexaAI/.swiftpm
+/.build
+/bindings/ios/Example/Example.xcodeproj/project.xcworkspace/xcshareddata
+/bindings/ios/Example/Example.xcodeproj/xcuserdata
