--- a/demos/RAG-NPU/requirements.txt
+++ b/demos/RAG-NPU/requirements.txt
@@ -6,4 +6,5 @@ python-docx>=1.1
 psutil
 pillow
 gradio
+pdfplumber
 numpy<2  # ARM64 Windows compatibility: matplotlib not yet compatible with NumPy 2.x
