--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -73,32 +73,10 @@ jobs:
           name: nexa-cli_macos_${{ matrix.arch }}.pkg
           path: runner/artifacts/nexa-cli_macos_${{ matrix.arch }}.pkg
           include-hidden-files: true
-
-  release:
-    name: Release macos_${{ matrix.arch }}
-    needs: build-cli
-    runs-on: ${{ matrix.runner }}
-    if: github.ref_type == 'tag'
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - runner: macos-13
-            arch: x86_64
-          - runner: macos-14
-            arch: arm64
-    env:
-      VERSION: ${{ github.ref_name }}
-
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: nexa-cli_macos_${{ matrix.arch }}.pkg
-          path: runner/artifacts/nexa-cli_macos_${{ matrix.arch }}.pkg
-
+          
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
         with:
           repository: NexaAI/nexa-sdk
           tag_name: ${{ env.VERSION }}
@@ -111,7 +89,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ZACK_ACCESS_TOKEN }}
 
       - name: Configure AWS credentials
-        if: ${{ !contains(github.ref, '-rc') }}
+        if:  github.ref_type == 'tag' && ${{ !contains(github.ref, '-rc') }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -119,7 +97,7 @@ jobs:
           aws-region: us-west-1
 
       - name: Sync to S3
-        if: ${{ !contains(github.ref, '-rc') }}
+        if:  github.ref_type == 'tag' && ${{ !contains(github.ref, '-rc') }}
         shell: bash
         run: |
           aws s3 cp "artifacts/nexa-cli_macos_${{ matrix.arch }}.pkg" "s3://nexa-model-hub-bucket/public/nexa_sdk/downloads/nexa-cli_macos_${{ matrix.arch }}.pkg"
