--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [tool.basedpyright]
 reportImplicitRelativeImport = false
 reportUnusedCallResult = false
+reportAny = false
+reportExplicitAny = false
 
 [tool.yapf]
 based_on_style = "pep8"
