--- a/demos/Agent-Granite/requirements.txt
+++ b/demos/Agent-Granite/requirements.txt
@@ -1,13 +1,8 @@
-faiss-cpu>=1.8
 requests>=2.31
 pydantic>=2.0
-pymupdf>=1.24
-python-docx>=1.1
 psutil
 pillow
 gradio
 pdfplumber
-sentence_transformers
-langchain<0.2.0
 google-search-results
-numpy<2  # ARM64 Windows compatibility: matplotlib not yet compatible with NumPy 2.x
+nexaai
