--- a/demos/RAG-NPU/requirements.txt
+++ b/demos/RAG-NPU/requirements.txt
@@ -1,10 +1,10 @@
 faiss-cpu>=1.8
 requests>=2.31
 pydantic>=2.0
-pymupdf>=1.24
 python-docx>=1.1
 psutil
 pillow
 gradio
 pdfplumber
 numpy<2  # ARM64 Windows compatibility: matplotlib not yet compatible with NumPy 2.x
+nexaai
