--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -238,6 +238,7 @@ jobs:
             nexa-cli_windows_${{ matrix.arch }}.exe
           draft: ${{ contains(github.ref, '-rc') }}
           generate_release_notes: true
+          append_body: false
           make_latest: ${{ !contains(github.ref, '-rc') }}
         env:
           GITHUB_TOKEN: ${{ secrets.ZACK_ACCESS_TOKEN }}
