--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -94,6 +94,7 @@ jobs:
             nexa-cli_linux_${{ matrix.arch }}.sh
           draft: ${{ contains(github.ref, '-rc') }}
           generate_release_notes: true
+          append_body: false
           make_latest: ${{ !contains(github.ref, '-rc') }}
         env:
           GITHUB_TOKEN: ${{ secrets.ZACK_ACCESS_TOKEN }}
