feat(docker): add EXPOSE and use entrypoint instead of cmd

--- a/runner/release/linux/Dockerfile
+++ b/runner/release/linux/Dockerfile
@@ -8,4 +8,5 @@ RUN apt-get update && apt-get install -y libgomp1 curl ffmpeg sox
 COPY nexa_sdk.$TARGETARCH /opt/nexa_sdk
 RUN ln -s /opt/nexa_sdk/nexa /usr/local/bin/nexa
 
-CMD ["nexa", "serve"]
+EXPOSE 18181
+ENTRYPOINT ["nexa"]
