--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -4,7 +4,6 @@ on:
   push:
     tags:
       - "v*"
-  workflow_dispatch:
 
 jobs:
   build-cli:
@@ -29,7 +28,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.24.3
+          go-version: 1.25.4
           cache-dependency-path: runner/go.sum
 
       - name: Download runtime
@@ -54,7 +53,6 @@ jobs:
     name: Package Release ${{ matrix.runner }}
     needs: build-cli
     runs-on: ${{ matrix.runner }}
-    if: github.ref_type == 'tag'
     strategy:
       fail-fast: false
       matrix:
@@ -114,10 +112,9 @@ jobs:
           aws s3 cp "nexa-cli_linux_${{ matrix.arch }}.sh" "s3://nexa-model-hub-bucket/public/nexa_sdk/downloads/nexa-cli_linux_${{ matrix.arch }}.sh"
 
   docker-release:
-    name: Docker Release ${{ matrix.runner }}
+    name: Docker Release
     needs: build-cli
     runs-on: ubuntu-22.04
-    if: github.ref_type == 'tag'
 
     env:
       VERSION: ${{ github.ref_name }}
@@ -133,7 +130,7 @@ jobs:
 
       - name: Prepare Build Context
         run: |
-          mkdir -p runner/release/linux/nexa_sdk
+          mkdir -p runner/release/linux
           mv artifacts/nexa-cli_linux_x86_64 runner/release/linux/nexa_sdk.amd64
           mv artifacts/nexa-cli_linux_arm64 runner/release/linux/nexa_sdk.arm64
           chmod +x runner/release/linux/*/nexa
@@ -152,7 +149,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and Push Docker Image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: runner/release/linux
           push: true
