--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -4,14 +4,11 @@ on:
   push:
     tags:
       - "v*"
-  workflow_dispatch:
 
 jobs:
   build-cli:
     name: macos_${{ matrix.arch }}
     runs-on: ${{ matrix.runner }}
-    env:
-      ARCH: ${{ matrix.arch }}
     strategy:
       fail-fast: false
       matrix:
@@ -21,22 +18,16 @@ jobs:
           - runner: macos-14
             arch: arm64
 
+    env:
+      VERSION: ${{ github.ref_name }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Detect Tag Version
-        if: startsWith(github.ref, 'refs/tags/v')
-        run: echo "VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
-
-      - name: Detect Commit Hash
-        if: github.event_name == 'workflow_dispatch'
-        run: echo "VERSION=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
+      - uses: actions/setup-go@v5
         with:
-          go-version: 1.24.3
+          go-version: 1.25.4
           cache-dependency-path: runner/go.sum
 
       - name: Download runtime
@@ -61,7 +52,6 @@ jobs:
     name: Package for macos_${{ matrix.arch }}
     needs: build-cli
     runs-on: ${{ matrix.runner }}
-    if: github.ref_type == 'tag'
     strategy:
       fail-fast: false
       matrix:
