--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -137,8 +137,7 @@ jobs:
           files: |
             artifacts/nexa-cli_macos_${{ matrix.arch }}.pkg
           draft: ${{ contains(github.ref, '-rc') }}
-          generate_release_notes: true
-          append_body: false
+          generate_release_notes: false
           make_latest: ${{ !contains(github.ref, '-rc') }}
         env:
           GITHUB_TOKEN: ${{ secrets.ZACK_ACCESS_TOKEN }}
