--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -202,8 +202,7 @@ jobs:
             nexa-cli_windows_${{ matrix.arch }}_cuda.exe
             nexa-cli_windows_${{ matrix.arch }}.exe
           draft: ${{ contains(github.ref, '-rc') }}
-          generate_release_notes: true
-          append_body: false
+          generate_release_notes: false
           make_latest: ${{ !contains(github.ref, '-rc') }}
         env:
           GITHUB_TOKEN: ${{ secrets.ZACK_ACCESS_TOKEN }}
