--- a/runner/release/linux/Dockerfile
+++ b/runner/release/linux/Dockerfile
@@ -2,19 +2,22 @@
 # Supports both amd64 and arm64 platforms
 # Usage: docker run --rm -it -v /path/to/data:/root/.cache/nexa.ai nexa4ai/nexasdk:latest
 
-FROM ubuntu:22.04
+ARG BASE_IMAGE=ubuntu:22.04
+
+FROM ${BASE_IMAGE}
 
 LABEL org.opencontainers.image.title="Nexa SDK"
 LABEL org.opencontainers.image.description="Nexa SDK CLI for running multi models"
 LABEL org.opencontainers.image.vendor="NexaAI"
 
-ARG TARGETARCH
-
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get update \
     && apt-get install -y libgomp1 curl ffmpeg sox \
     && rm -rf /var/lib/apt/lists/*
+
+ARG TARGETARCH
 COPY nexa_sdk.$TARGETARCH/ /opt/nexa_sdk/
+
 RUN ln -s /opt/nexa_sdk/nexa /usr/local/bin/nexa
 
 EXPOSE 18181
