--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -40,6 +40,8 @@ jobs:
           cd runner
           make build
           rm build/ml.h
+          #TODO: temporary remove these files to let ane_py work
+          rm -rf build/{nexaai_cpu_gpu,ane,nexaml}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
