chore(build): update macOS build scripts to remove additional temporary files and comment out unused code

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -41,7 +41,7 @@ jobs:
           make build
           rm build/ml.h
           #TODO: temporary remove these files to let ane_py work
-          rm -rf build/{nexaai_cpu_gpu,ane,nexaml}
+          rm -rf build/{nexaai_cpu_gpu,ane,nexaml,cpu_gpu,metal}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
