feat(docker): add data dir

--- a/runner/release/linux/Dockerfile
+++ b/runner/release/linux/Dockerfile
@@ -17,8 +17,9 @@ RUN DEBIAN_FRONTEND=noninteractive \
 
 ARG TARGETARCH
 COPY nexa_sdk.$TARGETARCH/ /opt/nexa_sdk/
-
 RUN ln -s /opt/nexa_sdk/nexa /usr/local/bin/nexa
+
+RUN mkdir -p /data && mkdir -p /root/.cache && ln -s /data /root/.cache/nexa.ai
 
 EXPOSE 18181
 ENTRYPOINT ["nexa"]
