--- a/bindings/android/gradle/libs.versions.toml
+++ b/bindings/android/gradle/libs.versions.toml
@@ -15,8 +15,22 @@ material = "1.10.0"
 kotlinxCoroutinesAndroid = "1.7.3"
 constraintlayout = "2.1.4"
 aws-android-s3 = '2.81.0'
+autoSize = "v1.2.1"
+immBar = "3.2.2"
+activity = "1.11.0"
+toaster = "13.8"
+recyclerview = "1.3.1"
+gson = "2.10.1"
+glide = "5.0.5"
 
 [libraries]
+glide = {group = "com.github.bumptech.glide", name = "glide", version.ref = "glide"}
+gson = {group = "com.google.code.gson", name = "gson", version.ref = "gson"}
+recyclerview = {group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview"}
+toaster = {group = "com.github.getActivity", name = "Toaster", version.ref = "toaster"}
+imm-bar-ktx = {group = "com.geyifeng.immersionbar", name = "immersionbar-ktx", version.ref = "immBar"}
+imm-bar = {group = "com.geyifeng.immersionbar", name = "immersionbar", version.ref = "immBar"}
+auto-size = {group = "com.github.JessYanCoding", name = "AndroidAutoSize", version.ref = "autoSize"}
 aws-android-sdk-s3 = {group = "com.amazonaws", name = "aws-android-sdk-s3", version.ref = "aws-android-s3"}
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -38,6 +52,7 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+ai-nexa-core = {group = "ai.nexa", name = "core", version.ref = "aiNexaCore"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
